<resources>
    <string name="app_name">ZEGA</string>
    <string name="required">Câmp obligatoriu</string>
    <string name="invalidEmail">Email invalid</string>
    <string name="incorrectEmail">Email incorect</string>
    <string name="incorrectPhoneNumber">Formatul numărului este incorect</string>
    <string name="forgotPassword">Ai uitat parola?</string>
    <string name="withoutAccount">Nu ai un cont?</string>
    <string name="haveAccount">Ai un cont?</string>
    <string name="signUp">Creează cont</string>
    <string name="createAccount">Creare cont</string>
    <string name="email">Email</string>
    <string name="password">Parolă</string>
    <string name="save">SALVEAZĂ</string>
    <string name="welcome">Bine ai venit</string>
    <string name="login">Conectează-te</string>
    <string name="firstName">Prenume</string>
    <string name="lastName">Nume de familie</string>
    <string name="europeanCountries">AL,AD,AT,BY,BE,BA,BG,HR,CZ,DK,EE,FI,FR,DE,GR,HU,IS,IE,IT,LV,LI,LT,LU,MT,MD,MC,ME,MK,NL,NO,PL,PT,RO,RU,SM,RS,SK,SI,ES,SE,CH,UA,GB</string>
    <string name="selectACountry">Selectați o țară</string>
    <string name="search">Caută</string>
    <string name="wantToExit">Doriți să vă deconectați?</string>
    <string name="yes">Da</string>
    <string name="no">Nu</string>

    <string name="navigation_drower_open">Deschide</string>
    <string name="navigation_drower_close">Închide</string>

    <string name="demo">Hello, %1$s! You have %2$d new messages.</string>
    <string name="date">%1$d.%2$d.%3$d</string>
    <string name="delete_file_confirmation">Stergeti fisierul \"%1$s\"?</string>
    <string name="anulare_raport">Doriți anularea raportului \"%1$s\"?</string>
    <string name="inlaturare_anulare_raport">Doriți să înlăturați anularea raportunui \"%1$s\"?</string>
    <string name="mesaj_validare_email">Ți-a fost trimis un email pentru a valida adresa de email</string>
    <string name="email_existent">Există deja un cont asociat acestei adrese de email</string>
    <string name="eroare_inregistrare">Eroare la înregistrare</string>

    <string name="without_sections">\"%1$s\" nu are sectii asociate.</string>
    <string name="reset_password">Introduceți mai jos adresa de e-mail și vă vom trimite un link pentru a putea să vă resetați parola.</string>
    <string name="reset_password_confirmation">V-am trimis un e-mail la adresa\n %1$s pentru a putea reseta parola.\n\nDaca nu ați primit nimic este posibil ca e-mailul să-l fi primit în folderul de spam.</string>

    <string name="admin">admin</string>
    <string name="super_user">inginer, asistent sef, medic sef</string>
    <string name="user">medic, asistent</string>


</resources>