<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="65dp"
        android:text="Bine ai venit"
        android:textColor="@color/black_russian"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmail"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email"
        android:textSize="15sp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/black_russian">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_russian" /><!--android:textCursorDrawable="@drawable/color_cursor" -->

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-1dp"
        android:layout_marginRight="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black_russian"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/black_russian">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black_russian" />
        <!--            android:textCursorDrawable="@drawable/color_cursor"-->

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <CheckBox-->
    <!--        android:id="@+id/rememberMeCheckBox"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@id/loginPassword"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_alignParentLeft="true"-->
    <!--        android:layout_centerInParent="true"-->
    <!--        android:layout_marginStart="23dp"-->
    <!--        android:layout_marginTop="1dp"-->
    <!--        android:text="Răman conectat" />-->

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/loginPassword"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-27dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@android:color/transparent"
        android:outlineAmbientShadowColor="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:padding="0dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/black_russian"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordButton"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/black_russian"
        android:outlineSpotShadowColor="@color/black_russian"
        android:text="@string/login"
        android:textColor="@color/floral_white"
        app:cornerRadius="3dp" />

    <TextView
        android:id="@+id/dontHaveAccout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/createAccountButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-7dp"
        android:text="@string/withoutAccount"
        android:textColor="@color/black_russian"
        android:textSize="17sp" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black_russian"
        android:outlineSpotShadowColor="@color/black_russian"
        android:text="@string/signUp"
        android:textColor="#FFF7EC"
        app:cornerRadius="3dp" />

</RelativeLayout>