<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackRussian"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="65dp"
        android:text="@string/createAccount"
        android:textAlignment="center"
        android:textColor="@color/desertStorm"
        android:textSize="45sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_logo"
        android:layout_centerHorizontal="true"
        android:weightSum="100">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/desertStorm"
            android:hint="@string/firstName"
            android:textColor="@color/desertStorm"
            android:textColorHint="@color/desertStorm"
            android:textSize="15sp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blackRussian"
                android:inputType="textPersonName|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@id/firstname"
            android:backgroundTint="@color/desertStorm"
            android:hint="@string/lastName"
            android:textColor="@color/desertStorm"
            android:textColorHint="@color/desertStorm"
            android:textSize="15sp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blackRussian"
                android:inputType="textPersonName|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullName"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccpRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            app:ccpDialog_backgroundColor="@color/black"
            app:ccpDialog_fastScroller_bubbleColor="@color/desertStorm"
            app:ccpDialog_fastScroller_bubbleTextAppearance="@style/bubbleText"
            app:ccpDialog_fastScroller_handleColor="@color/desertStorm"
            app:ccpDialog_showCloseIcon="true"
            app:ccp_showArrow="false"
            app:ccpDialog_textColor="@color/desertStorm"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoFormatNumber="true"
            app:ccp_contentColor="@color/desertStorm"
            app:ccp_countryPreference="ro"
            app:ccp_defaultNameCode="ro"
            app:ccp_showNameCode="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/desertStorm"
            android:hint="Telefon"
            android:textColor="@color/desertStorm"
            android:textColorHint="@color/desertStorm"
            android:textSize="15sp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blackRussian"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/desertStorm"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:textColor="@color/desertStorm"
        android:textColorHint="@color/desertStorm"
        android:textSize="15sp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackRussian"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/desertStorm"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:textColor="@color/desertStorm"
        android:textColorHint="@color/desertStorm"
        android:textSize="15sp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/desertStorm"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackRussian"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/darkYellow"
        android:text="@string/signUp"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp" />


    <TextView
        android:id="@+id/dontHaveAccout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/backToLoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-10dp"
        android:text="@string/haveAccount"
        android:textColor="@color/desertStorm"
        android:textSize="17sp" />


    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blackRussian"
        android:outlineSpotShadowColor="@color/blackRussian"
        android:text="@string/login"
        android:textColor="@color/darkYellow"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius="20dp" />


</RelativeLayout>